--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 @import url('./reset.css');
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
 
 header{
     position: absolute; width:100%;
@@ -54,12 +55,131 @@ header > div > nav > a{
     font-family: 'Montserrat', sans-serif;
     font-weight: 700;
 }
-.spot>a{
-    background-color: var(--point-color);
-    display: inline-block;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    padding:23px 40px;
-    border-radius: 6px;
-    margin-top:30px;
+
+
+/* service */
+.service{
+    width:1320px; margin:100px auto;
+    text-align: center;
 }
+.service > h2{}
+.service > div{
+    display: flex;
+    justify-content: space-between;
+    margin-top:60px;
+}
+.service > div > article{width:31%}
+.service > div > article::before{
+    content: 'shopping_cart';
+    font-family: 'Material Symbols Outlined';
+    color:white; 
+    font-size:4rem;
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin:0 auto;
+
+    background-color: var(--point-color);
+    width:128px; height:128px;
+    border-radius: 100%;
+}
+.service > div > article:nth-of-type(2):before{
+    content: 'shopping_bag';
+}
+.service > div > article:nth-of-type(3):before{
+    content: 'shopping_bag';
+}
+
+
+.service > div > article > h3{
+    margin:20px 0;
+}
+.service > div > article > p{
+    line-height: 1.8;
+}
+
+
+/* portfolio */
+.portfolio{
+    width:1320px; margin:120px auto;
+    text-align: center;
+}
+.portfolio > h2{}
+.portfolio > p{}
+.portfolio > ul{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    row-gap: 30px;
+    margin-top:60px;
+}
+.portfolio > ul > li{
+    width:31%;
+}
+.portfolio > ul > li > figure{}
+.portfolio > ul > li > figure > img{width:100%;}
+.portfolio > ul > li > figure > figcaption{
+    padding:24px 0;
+    transition: 0.5s;
+}
+.portfolio > ul > li > figure > figcaption > b{
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 800;
+    color:#212529;
+    font-size:1.5rem;
+}
+.portfolio > ul > li > figure > figcaption > p{}
+
+
+.portfolio > ul > li > figure:hover > figcaption{
+    background-color: rgb(214, 214, 214);
+}
+
+
+/* contact */
+.contact{
+    height:720px;
+    background: url('../imgs/map.png') 0 0 / cover no-repeat;
+    text-align: center;
+    padding:100px 0;
+}
+.contact > h2{color:white;}
+.contact > p{}
+
+.contact .info{
+    width:1320px; margin:64px auto 50px;
+    display: flex;
+    justify-content: space-between;
+}
+.contact .info>div{width:49%;}
+.contact .info>div > input{
+    width:100%; padding:20px;
+    border-radius: 6px;
+    border:none;
+}
+.contact .info>div > input::placeholder{
+    color:#ddd;
+    font-weight: bold;
+}
+
+
+.contact .info>div > input:nth-child(2){margin:4% 0;}
+.contact .info>div > textarea{
+    width:100%; padding:20px;
+    border-radius: 6px;
+    height:100%;
+    border:none;
+}
+
+
+
+footer{
+    width:1320px; margin:70px auto;
+    display: flex;
+    justify-content: space-between;
+}
+footer address{
+    font-style: normal;
+}
+footer nav{}
